<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/back" />

            <TextView
                fontPath="fonts/Ubuntu-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="#f6f6f6"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true" />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="#f6f6f6"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true" />

        <Button
            android:id="@+id/saveButton"
            fontPath="fonts/Ubuntu-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            app:backgroundTint="?colorPrimary"
            android:background="@drawable/button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

</RelativeLayout>
