<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF"
    android:fitsSystemWindows="true"
    tools:context="com.app.jobfizzer.com.app.uberdooX.activities.EnterVerificationCodeActivity">

    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:src="@drawable/close" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/otpEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/enter_validation"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/otpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="#f6f6f6"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:maxLength="6"
        android:padding="15dp"
        android:singleLine="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpEditText"
        app:backgroundTint="?colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/verify"
        android:textColor="#f4f4f4" />

</RelativeLayout>
