<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="20dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/light_grey"
    app:cardCornerRadius="5dp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="25dp">

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/exclamation" />
        </FrameLayout>


        <TextView
            fontPath="fonts/Ubuntu-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/no_provider_found"
            android:textColor="@color/text_colour"
            android:textSize="18sp" />


        <TextView
            fontPath="fonts/Ubuntu-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/you_need_to_search_again"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_grey">

            <TextView
                android:id="@+id/yesButton"
                fontPath="fonts/Ubuntu-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/noButton"
                fontPath="fonts/Ubuntu-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>