<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFF"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/back" />

            <TextView
                fontPath="fonts/Ubuntu-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        fontPath="fonts/Ubuntu-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/verification_text"
        android:textColor="@color/text_colour"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="75">

            <Button
                fontPath="fonts/Ubuntu-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?colorPrimary"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="#FFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <EditText
                android:id="@+id/emailEditText"
                fontPath="fonts/Ubuntu-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f6f6f6"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#1d1d1d" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendOtp"
        fontPath="fonts/Ubuntu-Regular.ttf"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send"
        android:textColor="#fcfcfc"
        app:backgroundTint="?colorPrimary" />

</LinearLayout>
