<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            fontPath="fonts/Ubuntu-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/text_colour"
            android:textSize="18sp" />

        <TextView
            fontPath="fonts/Ubuntu-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textColor="#1d1d1d"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameEditText"
            fontPath="fonts/Ubuntu-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:ems="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:shadowColor="#0000"
            android:singleLine="true"
            android:textColorHint="@color/text_colour_light"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_colour_light" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            fontPath="fonts/Ubuntu-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:ems="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/text_colour_light"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_colour_light" />

        <Button
            android:id="@+id/loginButton"
            fontPath="fonts/Ubuntu-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            app:backgroundTint="?colorPrimary"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            fontPath="fonts/Ubuntu-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_with"
            android:textColor="#1d1d1d"
            android:textSize="16sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginFbButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/facebookLoginButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginRight="10dp">

                <ImageButton
                    android:id="@+id/facebookLogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/circular_button"
                    android:padding="18dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebook" />

            </FrameLayout>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="65dp"
                android:layout_height="65dp">

                <ImageButton
                    android:id="@+id/googleLogin"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/circular_button"
                    android:padding="18dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingBottom="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dontHaveAnAccount"
                style="?android:attr/buttonBarButtonStyle"
                fontPath="fonts/Ubuntu-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dont_have_account"
                android:textAllCaps="false"
                android:textSize="13sp" />

            <Button
                android:id="@+id/forgotPassword"
                style="?android:attr/buttonBarButtonStyle"
                fontPath="fonts/Ubuntu-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password_text"
                android:textAllCaps="false"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>